--- a/dashboard/core/templates/index.html
+++ b/dashboard/core/templates/index.html
@@ -1,12 +1,20 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <title>title</title>
-    <!-- <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script> -->
   </head>
   <body>
     <p>This is the index.html page</p>
   </body>
-</html>
+</html> -->
+
+{% extends 'base.html' %}
+
+{% block title %}
+Home
+{% endblock %}
+
+{% block content %}
+<h1>This is the index.html page</h1>
+{% endblock %}
