--- a/dashboard/core/templates/index.html
+++ b/dashboard/core/templates/index.html
@@ -1,14 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>title</title>
-  </head>
-  <body>
-    <p>This is the index.html page</p>
-  </body>
-</html> -->
-
 {% extends 'base.html' %}
 
 {% block title %}
@@ -17,4 +6,11 @@ Home
 
 {% block content %}
 <h1>This is the index.html page</h1>
+<tbody>
+  {% for file in files %}
+  <tr>
+    <td>{{ file.filename }}</td>
+  </tr>
+  {% endfor %}
+</tbody>
 {% endblock %}
